--- a/NavDrawer/build.gradle
+++ b/NavDrawer/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
-        applicationId "org.es.androiddemo.navdrawer"
+        applicationId "com.cyrilleroux.demo.navdrawer"
         minSdkVersion project.ANDROID_BUILD_MIN_SDK_VERSION as int
         targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
         versionCode 1
