--- a/DoubleNavDrawer/src/main/AndroidManifest.xml
+++ b/DoubleNavDrawer/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.cyrilleroux.demo.navdrawer"
+    package="com.cyrilleroux.demo.doublenavdrawer"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MyActivity"
+            android:name="MyActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
