--- a/DemoApp/src/main/AndroidManifest.xml
+++ b/DemoApp/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:label="@string/title_double_nav"
             android:theme="@style/DoubleNavTheme" />
 
+        <activity
+            android:name="com.cyrilleroux.android.actionbar.FadingActionBarActivity"
+            android:label="@string/title_fading_action_bar"
+            android:theme="@style/FadingActionBar" />
+
     </application>
 
 </manifest>
