--- a/DemoApp/build.gradle
+++ b/DemoApp/build.gradle
@@ -26,9 +26,12 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
 
     // Git sub modules
     compile project(':Core')
     compile project(':Component')
+    compile project(':Network')
 }
