--- a/DemoApp/src/main/AndroidManifest.xml
+++ b/DemoApp/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest
-    package="com.cyrilleroux.android.demo"
+    package="com.cyrilleroux.android"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".DemoActivity"
+            android:name=".demo.DemoActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,24 +20,35 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.cyrilleroux.android.unlock.UnlockActivity"
+        <activity
+            android:name=".unlock.UnlockActivity"
             android:label="@string/title_unlock"
-            android:theme="@style/UnlockTheme"/>
+            android:theme="@style/UnlockTheme" />
 
         <activity
-            android:name="com.cyrilleroux.android.drawer.SimpleDrawerActivity"
+            android:name=".drawer.SimpleDrawerActivity"
             android:label="@string/title_simple_nav"
             android:theme="@style/SimpleNavTheme" />
 
         <activity
-            android:name="com.cyrilleroux.android.drawer.DoubleDrawerActivity"
+            android:name=".drawer.DoubleDrawerActivity"
             android:label="@string/title_double_nav"
             android:theme="@style/DoubleNavTheme" />
 
         <activity
-            android:name="com.cyrilleroux.android.actionbar.FadingActionBarActivity"
+            android:name=".actionbar.FadingActionBarActivity"
             android:label="@string/title_fading_action_bar"
             android:theme="@style/FadingActionBar" />
+
+        <activity
+            android:name=".cards.CardListActivity"
+            android:label="@string/title_vertical_card_list"
+            android:theme="@style/SimpleNavTheme" />
+
+        <activity
+            android:name=".cards.HorizontalCardListActivity"
+            android:label="@string/title_horizontal_card_list"
+            android:theme="@style/SimpleNavTheme" />
 
     </application>
 
