--- a/DemoApp/src/main/AndroidManifest.xml
+++ b/DemoApp/src/main/AndroidManifest.xml
@@ -50,6 +50,16 @@
             android:label="@string/title_horizontal_card_list"
             android:theme="@style/SimpleNavTheme" />
 
+        <activity
+            android:name=".cards.CardGridActivity"
+            android:label="@string/title_vertical_card_grid"
+            android:theme="@style/SimpleNavTheme" />
+
+        <activity
+            android:name=".cards.HorizontalCardGridActivity"
+            android:label="@string/title_horizontal_card_grid"
+            android:theme="@style/SimpleNavTheme" />
+
     </application>
 
 </manifest>
