--- a/DemoApp/build.gradle
+++ b/DemoApp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
-        applicationId "com.cyrilleroux.android.demo"
+        applicationId project.GROUP + ".android.demo"
         minSdkVersion project.ANDROID_BUILD_MIN_SDK_VERSION as int
         targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
         versionCode 1
@@ -25,11 +25,17 @@ android {
     }
 }
 
-dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:recyclerview-v7:21.0.3'
-    compile 'com.android.support:cardview-v7:21.0.3'
+repositories {
+    maven { url 'http://dl.bintray.com/cyrillrx/maven' }
+    maven { url "http://dl.bintray.com/google/exoplayer" }
+}
 
-    // Git sub modules
-    compile project(':Core')
+dependencies {
+
+    compile 'com.cyrillrx.android:core:0.1.4'
+    compile 'com.google.android.exoplayer:exoplayer:r1.3.1'
+
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
+    compile 'com.android.support:cardview-v7:22.1.1'
 }
