--- a/DemoApp/src/main/AndroidManifest.xml
+++ b/DemoApp/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest
-    package="com.cyrilleroux.android.demo"
+    package="com.cyrillrx.android.demo"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
