--- a/Discovery/src/main/AndroidManifest.xml
+++ b/Discovery/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.cyrilleroux.network.discovery"
+    package="com.cyrillrx.network.discovery"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
