--- a/KitkatTv/build.gradle
+++ b/KitkatTv/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
-        applicationId "com.cyrilleroux.kitkattv"
+        applicationId project.GROUP + ".kitkattv"
         minSdkVersion 17
         targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
         versionCode 1
@@ -26,6 +26,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:leanback-v17:21.0.3'
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:leanback-v17:22.1.1'
 }
