--- a/Webview/build.gradle
+++ b/Webview/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
-        applicationId "com.cyrilleroux.webview"
+        applicationId project.GROUP + ".webview"
         minSdkVersion project.ANDROID_BUILD_MIN_SDK_VERSION as int
         targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION as int
         versionCode 1
@@ -26,5 +26,5 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:21.0.3"
+    compile "com.android.support:appcompat-v7:22.1.1"
 }
