--- a/Webview/src/main/AndroidManifest.xml
+++ b/Webview/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.cyrilleroux.webview"
+    package="com.cyrillrx.webview"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
