--- a/gradle.properties
+++ b/gradle.properties
@@ -17,9 +17,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-GROUP=com.cyilleroux
+GROUP=com.cyrillrx
 
-ANDROID_BUILD_SDK_VERSION=21
-ANDROID_BUILD_TOOLS_VERSION=21.1.2
-ANDROID_BUILD_MIN_SDK_VERSION=14
-ANDROID_BUILD_TARGET_SDK_VERSION=21
+ANDROID_BUILD_SDK_VERSION=22
+ANDROID_BUILD_TOOLS_VERSION=22.0.1
+ANDROID_BUILD_MIN_SDK_VERSION=16
+ANDROID_BUILD_TARGET_SDK_VERSION=22
