--- a/DemoApp/src/main/AndroidManifest.xml
+++ b/DemoApp/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.cyrillrx.android.demo"
+<manifest package="com.cyrillrx.android.demo"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -52,6 +51,10 @@
         <activity
             android:name=".cards.HorizontalCardGridActivity"
             android:label="@string/title_horizontal_card_grid" />
+
+        <activity
+            android:name=".BottomNavActivity"
+            android:label="@string/title_bottom_nav" />
 
         <activity
             android:name=".notification.NotificationActivity"
