--- a/DemoApp/build.gradle
+++ b/DemoApp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion project.buildToolsVersion
 
     defaultConfig {
-        applicationId project.GROUP + ".android.demo"
+        applicationId "com.cyrillrx.android.demo"
         minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
         versionCode 1
@@ -32,12 +32,13 @@ repositories {
 
 dependencies {
 
-    compile 'com.cyrillrx.android:core:0.1.4'
-    compile 'com.google.android.exoplayer:exoplayer:r1.3.1'
-    compile 'com.ogaclejapan.arclayout:library:1.0.1@aar'
+    implementation 'com.cyrillrx.android:core:0.4.0'
+    implementation 'com.cyrillrx.android:logger-logcat:1.3.3'
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile "com.android.support:design:25.3.1"
+    implementation 'com.ogaclejapan.arclayout:library:1.0.1@aar'
+
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation "com.android.support:cardview-v7:$supportLibVersion"
+    implementation "com.android.support:design:$supportLibVersion"
 }
