--- a/Webview/build.gradle
+++ b/Webview/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion project.buildToolsVersion
 
     defaultConfig {
-        applicationId project.GROUP + ".webview"
+        applicationId "com.cyrillrx.webview"
         minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
         versionCode 1
@@ -26,5 +26,5 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:25.3.1"
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
 }
