--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,14 +16,15 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 
     ext {
         minSdkVersion = 18
-        compileSdkVersion = 25
-        targetSdkVersion = 25
-        buildToolsVersion = '25.0.1'
+        compileSdkVersion = 27
+        targetSdkVersion = 27
 
-        supportLibVersion = '25.2.0'
+        buildToolsVersion = '26.0.2'
+        supportLibVersion = '27.1.1'
     }
 }
