--- a/DemoApp/build.gradle
+++ b/DemoApp/build.gradle
@@ -20,25 +20,25 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 repositories {
-    maven { url 'http://dl.bintray.com/cyrillrx/maven' }
     maven { url "http://dl.bintray.com/google/exoplayer" }
 }
 
 dependencies {
 
-    implementation 'com.cyrillrx.android:core:0.4.0'
-    implementation 'com.cyrillrx.android:logger-logcat:1.3.3'
+    implementation("com.cyrillrx.android:core:0.5.1")
+    implementation("com.cyrillrx:logger:1.6.1")
+    implementation("com.cyrillrx.android:logger-logcat:1.6.1")
 
     implementation 'com.ogaclejapan.arclayout:library:1.0.1@aar'
 
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
-    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
-    implementation "com.android.support:cardview-v7:$supportLibVersion"
-    implementation "com.android.support:design:$supportLibVersion"
+    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation "com.android.support:recyclerview-v7:28.0.0"
+    implementation "com.android.support:cardview-v7:28.0.0"
+    implementation "com.android.support:design:28.0.0"
 }
