--- a/KitkatTv/build.gradle
+++ b/KitkatTv/build.gradle
@@ -20,12 +20,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
-    implementation "com.android.support:leanback-v17:$supportLibVersion"
+    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation "com.android.support:leanback-v17:28.0.0"
 }
