--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.3.61'
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath('com.android.tools.build:gradle:3.5.3')
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        maven { url 'http://dl.bintray.com/cyrillrx/maven' }
         google()
+        jcenter()
     }
 
     ext {
         minSdkVersion = 18
-        compileSdkVersion = 27
-        targetSdkVersion = 27
+        compileSdkVersion = 29
+        targetSdkVersion = 29
 
-        buildToolsVersion = '26.0.2'
-        supportLibVersion = '27.1.1'
+        buildToolsVersion = '29.0.0'
     }
 }
