--- a/DemoApp/build.gradle
+++ b/DemoApp/build.gradle
@@ -35,10 +35,10 @@ dependencies {
     implementation("com.cyrillrx:logger:1.6.1")
     implementation("com.cyrillrx.android:logger-logcat:1.6.1")
 
-    implementation 'com.ogaclejapan.arclayout:library:1.0.1@aar'
+    implementation("com.ogaclejapan.arclayout:library:1.0.1@aar")
 
-    implementation "com.android.support:appcompat-v7:28.0.0"
-    implementation "com.android.support:recyclerview-v7:28.0.0"
-    implementation "com.android.support:cardview-v7:28.0.0"
-    implementation "com.android.support:design:28.0.0"
+    implementation("com.android.support:appcompat-v7:28.0.0")
+    implementation("com.android.support:recyclerview-v7:28.0.0")
+    implementation("com.android.support:cardview-v7:28.0.0")
+    implementation("com.android.support:design:28.0.0")
 }
