--- a/DemoApp/build.gradle
+++ b/DemoApp/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion project.compileSdkVersion
@@ -25,15 +26,13 @@ android {
     }
 }
 
-repositories {
-    maven { url "http://dl.bintray.com/google/exoplayer" }
-}
-
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.6.0"
 
-    implementation("com.cyrillrx.android:core:0.5.1")
-    implementation("com.cyrillrx:logger:1.6.1")
-    implementation("com.cyrillrx.android:logger-logcat:1.6.1")
+    api(files("../libs/core-release.aar"))
+    api(files("../libs/logger-release.aar"))
+    api(files("../libs/logcat-release.aar"))
 
     implementation("com.ogaclejapan.arclayout:library:1.0.1@aar")
 
@@ -41,4 +40,7 @@ dependencies {
     implementation("com.android.support:recyclerview-v7:28.0.0")
     implementation("com.android.support:cardview-v7:28.0.0")
     implementation("com.android.support:design:28.0.0")
+}
+repositories {
+    mavenCentral()
 }
