--- a/KitkatTv/build.gradle
+++ b/KitkatTv/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion project.compileSdkVersion
@@ -26,6 +27,11 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:28.0.0"
-    implementation "com.android.support:leanback-v17:28.0.0"
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version")
+    implementation("androidx.core:core-ktx:1.6.0")
+
+    implementation("com.google.android.material:material:1.4.0")
+
+    implementation("androidx.fragment:fragment-ktx:1.3.6")
+    implementation("androidx.leanback:leanback:1.0.0")
 }
