--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.5.21'
+
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
+
     dependencies {
-        classpath('com.android.tools.build:gradle:4.0.2')
+        classpath('com.android.tools.build:gradle:4.2.2')
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
-        maven { url 'http://dl.bintray.com/cyrillrx/maven' }
         google()
-        jcenter()
+        mavenCentral()
     }
 
     ext {
-        minSdkVersion = 18
-        compileSdkVersion = 29
-        targetSdkVersion = 29
+        minSdkVersion = 21
+        compileSdkVersion = 30
+        targetSdkVersion = 30
 
-        buildToolsVersion = '29.0.0'
+        buildToolsVersion = '30.0.2'
     }
 }
